# MailingProject

./: .flake8  README.md  READMY.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: create_groups.py  sending_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_tryrecipient_status.py  0002_initial.py  0003_alter_recipient_email_and_more.py  0004_tryrecipient_owner.py  0005_remove_tryrecipient_owner.py  0006_tryrecipient_owner.py  0007_alter_mailing_enddt.py  0008_alter_mailing_enddt.py
mailing/templates/: base.html  delete.html  home.html  mailing.html  mailing_detail.html  send_handmade.html  statistic_menu.html  try_recipient.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_avatar.py  0004_alter_user_avatar.py  0005_alter_user_avatar.py  0006_alter_user_avatar.py  0007_user_token_alter_user_is_active.py
users/templates/: login.html  profile.html  profile_update.html
