[tool.poetry]
name = "mailingproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"
isort = "^6.0.0"
mypy = "^1.15.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[black]
line-length = 119
exclude = ".git"

[isort]
line_length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"